fix menu on mobile

--- a/pykapela/src/assets/scss/snippets/_menu.scss
+++ b/pykapela/src/assets/scss/snippets/_menu.scss
@@ -4,7 +4,7 @@ body {
     .title-bar {
 
         opacity: 0.9;
-
+        align-self: flex-start;
 
         ul {
             li {
